# open-clawx-code

./: .gitignore  CLAUDE.md  Cargo.toml
.claude/: settings.json
.claude/agents/: code-reviewer.md  code-simplifier.md  debugger.md  docs-manager.md  fullstack-developer.md  planner.md  researcher.md  tester.md
.claude/rules/: development-rules.md  karpathy-coding-guidelines.md  orchestration-protocol.md  primary-workflow.md  team-coordination-rules.md
.claude/skills/ck-debug/: SKILL.md
.claude/skills/ck-plan/: SKILL.md
.claude/skills/sequential-thinking/: SKILL.md
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/claw-api/: Cargo.toml
crates/claw-api/src/: lib.rs  types.rs
crates/claw-api/src/providers/: anthropic.rs  mod.rs
crates/claw-api/tests/: client_integration.rs  openai_compat_integration.rs  provider_client_integration.rs  proxy_integration.rs
crates/claw-plugins/: Cargo.toml
crates/claw-runtime/: Cargo.toml
crates/claw-runtime/src/: conversation.rs
crates/claw-runtime/tests/: integration_tests.rs
crates/claw-telemetry/: Cargo.toml
crates/gitnexus/: Cargo.toml
crates/gitnexus/src/: auto_reader.rs  cli_runner.rs  lib.rs  native_reader.rs  reader_trait.rs  types.rs
crates/lsp/: Cargo.toml
crates/lsp/src/: connection.rs  detect.rs  lib.rs
crates/orchestrator/: Cargo.toml
crates/orchestrator/src/: agent_team.rs  lib.rs  test_runner.rs
crates/providers/: Cargo.toml
crates/providers/src/: anthropic.rs  gemini.rs  groq.rs  lib.rs  ollama.rs  openai.rs  registry.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
crates/tui/: Cargo.toml
crates/tui/src/: app.rs  config.rs  conversation.rs  layout.rs  lib.rs  modes.rs  runtime_bridge.rs  session_manager.rs  splash.rs  theme.rs  types.rs
crates/tui/src/input/: mod.rs  slash_commands.rs
crates/tui/src/widgets/: agent_team_panel.rs  approval_dialog.rs  autocomplete_dropdown.rs  config_editor.rs  context_panel.rs  conversation_panel.rs  diagnostics_tab.rs  files_tab.rs  git_tab.rs  gitnexus_tab.rs  help_overlay.rs  impact_dialog.rs  input_bar.rs  mod.rs  model_picker.rs  placeholder.rs  session_picker.rs  status_bar.rs  tool_block.rs
docs/: code-standards.md  codebase-summary.md  project-overview-pdr.md  system-architecture.md
plans/260407-1606-open-clawx-code/: phase-06-agentic-loops-and-gitnexus.md  plan.md
