[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[workspace.dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# forked claw-code crates
claw-api = { path = "crates/claw-api" }
claw-runtime = { path = "crates/claw-runtime" }
claw-plugins = { path = "crates/claw-plugins" }
claw-telemetry = { path = "crates/claw-telemetry" }

# OCX crates
ocx-gitnexus = { path = "crates/gitnexus" }
ocx-orchestrator = { path = "crates/orchestrator" }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_panics_doc = "allow"
missing_errors_doc = "allow"
