[package]
name = "ocx"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "ocx"
path = "src/main.rs"

[dependencies]
ocx-tui = { path = "../tui" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true

[lints]
workspace = true
