[package]
name = "claw-api"
version = "0.1.0"
edition = "2021"
license = "MIT"
publish = false

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
claw-runtime = { path = "../claw-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
claw-telemetry = { path = "../claw-telemetry" }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }

[lints.rust]
unsafe_code = "forbid"
dead_code = "allow"

[lints.clippy]
all = "allow"
pedantic = "allow"
