[package]
name = "ocx-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
claw-runtime.workspace = true
ocx-gitnexus = { path = "../gitnexus" }
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true

[lints]
workspace = true
