[package]
name = "ocx-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
claw-api.workspace = true
claw-runtime.workspace = true
ocx-gitnexus = { path = "../gitnexus" }
ocx-orchestrator = { path = "../orchestrator" }
ocx-providers = { path = "../providers" }
ratatui.workspace = true
crossterm.workspace = true
tokio.workspace = true
anyhow.workspace = true

[lints]
workspace = true
